--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
